Add html and js for login, register, forgot password

--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "angular-translate": "^2.13.1",
-    "angular-translate-loader-static-files": "^2.13.1"
+    "angular-translate-loader-static-files": "^2.13.1",
+    "angular-resource": "^1.6.1",
+    "ngstorage": "^0.3.11"
   }
 }
